# Software-System-Lab

./: README.md
lab1/outlab_1/: readme.txt
lab1/outlab_1/extra/nullspace finder/: nullspace.m  nullspace_test.m
lab1/outlab_1/extra/optimized root finder/: abs.m  case2_code.m  case2_find_roots.m  f_2.m  findrange_2.m
lab1/outlab_1/extra/pagerank without eig/: pagerank_without_eig.m
lab1/outlab_1/part 1/: f_1.m  f_3.m  findrange.m  projectilemotion.m  search.m
lab1/outlab_1/part 2/: pagerank.m
lab10/inlab_10/: readme.txt
lab10/outlab_10/: makefile
lab10/outlab_10/ChatSrvc/: readMe.txt
lab10/outlab_10/ChatSrvc/src/cs251lab10package/: ClientEnc.java  Encryptor.java  JChatComm.java  JClient.java  JMessage.java  JPacket.java  JServer.java
lab10/outlab_10/q1/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
lab10/outlab_10/q1/.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  (+1 more)
lab10/outlab_10/q1/MathOps/: .project
lab10/outlab_10/q1/MathOps/src/: Main.java
lab10/outlab_10/q2/Lab08Q2/: .project
lab10/outlab_10/q2/Lab08Q2/src/: ReaderWriter.java
lab2/inlab_2/: mathjax1.html  readMe
lab2/outlab_2/: aboutMe.html  contectMe.html  group.html  index.css  index.html  index.js  killersudoku.html  mycanvas.html  readMe.txt  readme.txt  sac.html
lab3/outlab_3/: readme.txt
lab3/outlab_3/part1/: dominos.cpp
lab3/outlab_3/part2/: dominos.cpp
lab4/inlab_4/: countFreq.sh  makePasswordless.sh  readMe.txt  syncToMars.sh
lab4/outlab_4/: compute_inc.sh  count_files.sh  population.csv  print_header_files.sh  question4  question6  readMe.txt  script\_compile.sh  system_spec.sh
lab5/inlab_5/: q2.txt  readme.txt
lab5/inlab_5/bashrc_g33/: .bashrc  makefile  mytop.sh
lab5/outlab_5/: cmakeSubmit.txt  make.txt  readMe.txt
lab5/outlab_5/square_and_add/: CMakeLists.txt
lab5/outlab_5/square_and_add/libsrc/include/: square.h
lab5/outlab_5/square_and_add/libsrc/src/: CMakeLists.txt  square.cc
lab5/outlab_5/square_and_add/src/: CMakeLists.txt  main.cc
lab6/inlab_6/: GM.tex  beamer.aux  beamer.nav  beamer.tex  beamer.tex.backup  plot.sh  readMe.txt
lab6/outlab_6/: GayatriMantra.dn  ProjectProposal.tex  distance.m  gradient_descent.m  makefile  plot.gnu  readMe.txt  references.bib
lab7/inlab_7/: comment_finder.py  log.txt  readMe.txt
lab7/inlab_7/git_cs251_highest/refs/heads/: master
lab7/outlab_7/: citations.txt  fetch_data.py  log.txt  readMe.txt  text_to_csv.py
lab8/inlab_8/: FactorialDivisor.java  OutputLines.java  readMe.txt
lab8/outlab_8/: Book.java  NthRoot.java  Reader.java  ReaderWriter.java  SolveBigEquation.java  Writer.java  readme.txt
lab9/inlab_9/: correct.c  create_data.sh  fibo.cpp  log.txt  plot.py  readMe.txt
lab9/outlab_9/: readMe.txt
lab9/outlab_9/cs251_base_code/: Makefile
lab9/outlab_9/cs251_base_code/doc/: analysisPart1.txt  analysisPart2.txt  report.aux  report.tex
lab9/outlab_9/cs251_base_code/src/: dominos.cpp
(+26 files in other folders)
